--- a/formulário.html
+++ b/formulário.html
@@ -8,22 +8,19 @@
 <body>
     <h3>Formulário de cadastro</h3>
     <form>
-        <label>Nome</label>
-        <input type="text"
-    </form> 
+        <label for="text">Nome</label>
+        <input id="text" type="text" />
+        <br />
+        <label for="E-mail">E-mail</label>
+        <input id ="email" type="mail" />
+        <br />
+        <label for="password">Senha</label>
+        <input id="password" type="password" />
+        <br />
+        <button type="submit">
+            Cadastrar
+        </button>
+    </form>
     <br />
-    <form>
-        <label>E-mail</label>
-        <input type="mail"
-    </form> 
-    <br />
-    <form>
-        <label>Senha</label>
-        <input type="text"
-    </form> 
-    <br />
-    <button>
-        Cadastrar
-    </button>
 </body>
 </html>
