--- a/formulário.html
+++ b/formulário.html
@@ -11,8 +11,8 @@
         <label for="text">Nome</label>
         <input id="text" type="text" />
         <br />
-        <label for="E-mail">E-mail</label>
-        <input id ="email" type="mail" />
+        <label for="email">E-mail</label>
+        <input id ="email" type="email" />
         <br />
         <label for="password">Senha</label>
         <input id="password" type="password" />
